--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="home-sci">
             <a href="#"><i class='bx bxl-facebook'></i></a>
             <a href="#"><i class='bx bxl-twitter' ></i></a>
-            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+            <a href="https://www.linkedin.com/in/s-harsha-vardhan-4a220a1ba/"><i class='bx bxl-linkedin' ></i></a>
         </div>
 
      </section>
